welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: 'while' expected but 'else' found.
	}else{
         ^SlugHunting:9: error: '(' expected but '}' found.
}
^